@@ -56,7 +56,11 @@ JH/06 Log outbound-TLS and port details, subject to log selectors, for a
 
 JH/07 Add malware type "sock" for talking to simple daemon.
 
-JH/08 Bugzilla 1371: Add tls_{,try_}verify_hosts to smtp transport. OpenSSL only.
+JH/08 Bugzilla 1371: Add tls_{,try_}verify_hosts to smtp transport.
+      OpenSSL only.
+
+JH/09 Bugzilla 1431: Support (with limitations) headers_add/headers_remove in
+      routers/transports under cutthrough routing.
 
 
 Exim version 4.82
